# mandel-fast

./: .gitignore  Cargo.toml  README.md  pyproject.toml
mandel_fast/: __init__.py  py_impl.py  rust_impl.py
mandel_fast/cli/: __init__.py  main.py  render.py
mandel_fast/core/: __init__.py  numpy_impl.py  py_impl.py
mandel_fast/render/: animation.py  render.py
scripts/: bench.py  bench_results.npz  nice_plot.py  plot_benchmark.py
src/: lib.rs
test/: ab_test.py  conftest.py
