[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "mandel-fast"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mandel_fast._rust"
