[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "mandel-fast"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mandel_fast._rust"

[tool.pytest.ini_options]
testpaths = ["test/"]
addopts = [
  "--cov-report", "term",
  "--cov", "mandel_fast"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
