[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "mandel-fast"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "rich>=14.3.1",
    "rich-click>=1.9.7",
]

[project.scripts]
mandel-fast = "mandel_fast.cli.main:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mandel_fast.core._rust"

[tool.pytest.ini_options]
testpaths = ["test/"]
addopts = [
  "--cov-report", "term",
  "--cov", "mandel_fast"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
